tests/unit/language/errors/proc_in_archetype.arche
// RUN: %arche build -o %t %s > %t.out 2>&1 ; grep -qi "archetype components" %t.out
// proc/func types cannot be archetype components — archetypes are data.
h      :: proc()(code: int)
Entity :: arche { on_hit :: h }
main   :: proc() {
}
